------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

January 1 2004 Timo Kiviluoto <firstname.lastname@hut.fi>

	* Corrected an extremely fatal bug in the square destruction code (it may
	  have caused random crashes when changing levels)
	* Fixed a harmless light update absence bug in the cloning code
	* N simultaneously bought items in a shop can no longer cost more than N
	  times one item's price (formelly this was possible since all arithmetic
	  operations during the price calculations were rounded down)
	* Monsters now avoid needlessly stepping on banana peels and broken bottles
	* The nationality adjective "Attnamian" is now written "Attnamese"
	* Gear pictures are now updated correctly when an equipped item spoils
	* Adjusted the word order of sword names (based on our weapon expert Kahvi's
	  opinions)
	* The game no longer enters an infinite loop when blood is spilled on an
	  enner beast's groin
	* It is now possible to determine the leader of a team in the script
	* It is now possible to determine how spoiled items are in the script
	* Adding several identical items in the script is now more elegant
	* Remade the consume system: the game now handles correctly situations
	  where the player eg. eats an iron sword with a banana flesh handle
	* Ikiros can now remove rust from equipment
	* Fixed two bugs in Loricatus's pray effect
	* Optimized the generation of terrains and items somewhat
	* Added many new features to New Attnam
	  * Banana shop for the hungry (the products start to spoil within a few
	    turns, though)
	  * Priestess of Silva who offers the same services as the priest in
	    Attnam but is cheaper
	  * Tourist family who follow Kaethos around the town