@@ -68,3 +68,4 @@ Choosing a name including one of characters '/', '\' as any but the first charac
 Choosing a name including the character ':' will result in very odd consequences, like crashes, disappearing saves and savefiles which cannot be deleted (at least in Windows).
 "You push your fingers down to your throat and vomit." msg incorrect when a dolphin.
 It seems to be possible to occasionally find traps by saveloading next to them.
+Mushrooms can be kicked around.
